[package]
name = "server-rs"
version = "0.1.0"
authors = ["h04x <liquid.doctrine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
rand = "0.8"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-tungstenite = "0.13"
tungstenite = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
#lazy_static = "1.4"

